Dynamic Links Mobile No Null check

--- a/force-app/main/default/classes/ABSLI_PremiumPaymentLinkController.cls
+++ b/force-app/main/default/classes/ABSLI_PremiumPaymentLinkController.cls
@@ -2,8 +2,8 @@
  * @description       : Class for premium Payment LWC
  * @author            : Viren, dhinesh.t@salesforce.com
  * @group             : 
- * @last modified on  : 06-03-2024
- * @last modified by  : dhinesh.t@salesforce.com
+ * @last modified on  : 07-15-2024
+ * @last modified by  : ChangeMeIn@UserSettingsUnder.SFDoc
  * Modifications Log
  * Ver   Date         Author                       Modification
  * 1.0   06-03-2024   dhinesh.t@salesforce.com   Initial Version
@@ -140,7 +140,9 @@ public with sharing class ABSLI_PremiumPaymentLinkController {
             List<Database.SaveResult> results = EventBus.publish(eventList);
             System.debug(results);
         }
-        
+        else{
+            throw new AuraException('Mobile number is not present for this record.');
+        }
         
     }
     
