--- a/force-app/main/default/classes/ASF_CaseSLAHandlerV1.cls
+++ b/force-app/main/default/classes/ASF_CaseSLAHandlerV1.cls
@@ -264,7 +264,7 @@ public without sharing class ASF_CaseSLAHandlerV1 {
         List<ASF_Case_SLA_History__c> slaHistoryList = new List<ASF_Case_SLA_History__c>();
         Map<Id, Case> internalCaseUpdateMap = ASF_CaseTriggerModularHelper.getCaseFinalDMLMap();
         //without query, owner.name will not come  . hence this query is needed 
-        for(Case c : [SELECT Id, Owner.Name, BusinessHoursId,Status, Stage__c, PlatformEventInitiatedBy__c,Case_Assigned_Team__c FROM Case WHERE Id IN: newCases.values()]){
+        for(Case c : [SELECT Id, Owner.Name, BusinessHoursId,Status, Stage__c, PlatformEventInitiatedBy__c FROM Case WHERE Id IN: newCases.values()]){
             Case updatedCase = internalCaseUpdateMap.get(c.Id);
             //Not coming from Omnichannel
             //pure insert and
@@ -286,9 +286,6 @@ public without sharing class ASF_CaseSLAHandlerV1 {
             slaHistory.Case__c = c.Id;
             slaHistory.Stage__c = c.Stage__c;
             slaHistory.Status__c = c.Status;
-            // VIRENDRA - 11 June 2024 - To STAMP CASE ASSIGNED TEAM DURING THE SLA CREATION.
-            slaHistory.Case_Assigned_Team__c = c.Case_Assigned_Team__c;
-            // VIRENDRA - ENDS HERE.
             slaHistory.FromStage__c = (oldCases != null && c.Stage__c!=oldCases.get(c.Id).Stage__c)?oldCases.get(c.Id).Stage__c:'';
             slaHistory.Actioned_By__c = c.Stage__c == 'Resolved'?c.Owner.Name:UserInfo.getName();
             slaHistory.Actioned_By__c = ASF_CaseSLAHandlerV1.isFromOmniChannel?Label.ASF_Omnichannel_ActionedBy_Username:slaHistory.Actioned_By__c;
@@ -892,6 +889,9 @@ public without sharing class ASF_CaseSLAHandlerV1 {
                             updatedCase.Overall_Case_Closure_SLA__c = BusinessHours.add(updatedCase.BusinessHoursId,updatedCase.Case_Stage_Change_Date__c, closeSlaSec - overallTimeSpent);
                             percntCls.setOverallPercSLAFields(closeSlaSec,updatedCase.BusinessHoursId,updatedCase.Case_Stage_Change_Date__c.addSeconds(- Integer.valueOf(overallTimeSpent)),updatedCase);
                         }
+                        updatedCase.Stage_SLA_1__c = null;
+                        updatedCase.Stage_SLA_2__c = null;
+                        updatedCase.Stage_SLA_3__c = null;
                         if(sla1Sec != null){
                             updatedCase.Stage_SLA_1__c = BusinessHours.add(updatedCase.BusinessHoursId, updatedCase.Case_Stage_Change_Date__c, (sla1Sec - timeSpentInLong));
                             percntCls.setStagePercSLAFields(sla1Sec,updatedCase.BusinessHoursId,updatedCase.Case_Stage_Change_Date__c.addSeconds(- Integer.valueOf(timeSpent!=null?timeSpent:'0')),updatedCase);
@@ -907,9 +907,16 @@ public without sharing class ASF_CaseSLAHandlerV1 {
                 //Loop to check if the Case Id + Stage__c consumed is more than SLA 1
                 else if(sla1Sec != null && caseStageSummarizedViewMap.containsKey(i + newCases.get(i).Stage__c) && caseStageSummarizedViewMap.get(i + newCases.get(i).Stage__c).totalTimeSpent > sla1Sec){
                     if(caseStageSummarizedViewMap.get(i + newCases.get(i).Stage__c).violatedTime != null){
+                        updatedCase.Stage_SLA_1__c = null;
                         //On SLA 1 get the Violation Date Time populated when SLA 1 is breached through flow
                         updatedCase.Stage_SLA_1__c = caseStageSummarizedViewMap.get(i + newCases.get(i).Stage__c).violatedTime.Stage_Violation_Start_Date__c ;
                         percntCls.setStagePercSLAFields(sla1Sec,caseStageSummarizedViewMap.get(i + newCases.get(i).Stage__c).violatedTime.BusinessHoursId__c,newCases.get(i).Stage_SLA_1__c,updatedCase);
+                        if(sla2Sec == null){
+                            updatedCase.Stage_SLA_2__c = null;
+                        }
+                        if(sla3Sec == null){
+                            updatedCase.Stage_SLA_3__c = null;
+                        }
                         //To check if stage is same and owner is changed
                         if(sla2Sec != null && sla3Sec != null){
                             // string businessHrsusedForcalcuation1 = resultMap.get(index).caseUserOwnerBusinessHoursMap;
