--- a/force-app/main/default/classes/ABSLI_RegisterIGMSComplaintIntegration.cls
+++ b/force-app/main/default/classes/ABSLI_RegisterIGMSComplaintIntegration.cls
@@ -13,6 +13,7 @@ public with sharing class ABSLI_RegisterIGMSComplaintIntegration implements ASF_
         for (Case caseRec : caseRecs) {
             caseRecords.add(ASF_IntegrationsController.queriedCasesForIntegration.get(caseRec.Id));
         }
+        Map<String,Map<String,Set<String>>> mClassificationIGMS = ABSLI_IGMSClassificationUtility.getIGMSClassification();
         
         for (Case caseRecord : caseRecords) {
             ASF_IntegrationsController.IntegrationWrapper result = new ASF_IntegrationsController.IntegrationWrapper();
@@ -56,6 +57,14 @@ public with sharing class ABSLI_RegisterIGMSComplaintIntegration implements ASF_
             if(caseRecord.ABSLI_Case_Detail__r.IGMS_Complaint_Status__c != null){
                 errorMessage = 'Case is already sync with IGMS., ';
                 //bErrorOccured = true;
+            }
+            if(caseRecord.IGMS_Complaint_Type_Code__c != null){
+                ABSLI_IGMSClassificationUtility.validationWrapper returnWrapper= ABSLI_IGMSClassificationUtility.validateCurrentSelection(mClassificationIGMS, caseRecord);
+                if(returnWrapper.bErrorOccured){
+                    errorMessage = returnWrapper.errorMessage;
+                    bErrorOccured = returnWrapper.bErrorOccured;
+                }
+                
             }
             if(bErrorOccured){
                 errorMessage = errorMessage.removeEnd(', ');
