--- a/force-app/main/default/classes/ASF_CaseQueryHandler.cls
+++ b/force-app/main/default/classes/ASF_CaseQueryHandler.cls
@@ -2,8 +2,8 @@
  * @description       : 
  * @author            : rsinghnagar@salesforce.com
  * @group             : 
- * @last modified on  : 05-14-2024
- * @last modified by  : rsinghnagar@salesforce.com
+ * @last modified on  : 07-17-2024
+ * @last modified by  : ChangeMeIn@UserSettingsUnder.SFDoc
 **/
 public without sharing class ASF_CaseQueryHandler {
     private static List<Case> cases = null;
@@ -204,7 +204,8 @@ public without sharing class ASF_CaseQueryHandler {
                     FROM Work_Items__r
                 ),
                 (
-                    SELECT Id, Name, Type__c, Mandatory__c,Description__c, Checklist_External_Id__c
+                    // VIRENDRA - 13 June 2024 - ADDED Picklist_Options__c in SOQL.
+                    SELECT Id, Name, Label__c, Type__c, Mandatory__c,Description__c, Checklist_External_Id__c, Picklist_Options__c 
                     FROM Case_Checklist_Masters__r
                 ),
                 Step_1_Approver_1__c,
